# 3D-Prog-Compulsory-Final

./: .gitignore  CMakeLists (2).txt  CMakeLists.txt  CompulsoryFinal.cpp  CompulsoryFinal.h
assets/shaders/: shader.fs
core/: pathDir.h
core/fActor/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  MeshActor.cpp  MeshActor.h  Scene.cpp  Scene.h  StaticMeshActor.cpp  StaticMeshActor.h  Transform.h
core/fApplication/: Application.cpp  Application.h  Window.cpp  Window.h
core/fInterfaces/: Controller.h  Render.h
core/fMesh/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Vertex.h
core/fObject/: Vertex.h
core/misc/: OGLUint.h  pathDir.h
